
  For the latest news about less, see the "less" Web page:
      http://www.greenwoodsoftware.com/less
  You can also download the latest version of less from there.

  To report bugs, suggestions or comments, send email to 
  bug-less@gnu.org or markn@greenwoodsoftware.com.

======================================================================


	Major changes between "less" versions 378 and 381

* New -L option to disable LESSOPEN processing.

* Further support for large (64 bit) file addressing.
  Large file support is now set up by the configure script.

* Use autoconf 2.54.
  Replace configure.in, acconfig.h, defines.h.top with configure.ac.

* Overstriking underscore with underscore is now bold or underlined 
  depending on context.

* Use only 7 spaces for line numbers in -N mode, if possible.

* Fix some bugs in handling overstriking in UTF-8 files.

* Fix some nroff issues in the man page.

======================================================================

	Major changes between "less" versions 376 and 378

* Bug fixes:
  Default buffer space is now 64K as documented.
  Search highlighting works properly when used with -R.
  Windows version works properly when input file contains carriage returns.
  Clean up some compiler warnings.

======================================================================

	Major changes between "less" versions 358 and 376

* -x option can now specify multiple variable-width tab stops.

* -X option no longer disables keypad initialization.
  New option --no-keypad disables keypad initialization.

* New commands t and T step through multiple tag matches.
  Added support for "global(1)" tags
  (see http://www.gnu.org/software/global/global.html).

* New prompt style set by option -Pw defines the message printed 
  while waiting for data in the F command.

* System-wide lesskey file now defaults to sysless in etc directory 
  instead of .sysless in bin directory.
  Use "configure --sysconfdir=..." to change it.